# chadthrottle

./: .gitignore  .phase1_status  .phase2a_status  ARCHITECTURE.md  AUTO_SCROLL_FIX.md  BACKEND_COMPATIBILITY_MODAL_BUG.md  BACKEND_COMPATIBILITY_MODAL_FIX.md  BACKEND_COMPATIBILITY_MODAL_FIX_PLAN.md  BACKEND_MODAL_BUGS_FIXED.md  BACKEND_MODAL_BUG_ANALYSIS.md  BACKEND_NAME_FIX.md  BACKEND_PERSISTENCE_FIX.md  BACKEND_SWITCHING_GUIDE.md  BPF_ALLOW_MULTI_FIX.md  BPF_ATTACH_AUTO_FALLBACK.md  BPF_DETACH_FIX.md  BPF_DETACH_FLAGS_FIX.md  BUILD.md  CGROUP_V2_REFACTORING_COMPLETE.md  CHANGELOG.md  CLEANUP_DIAGNOSTIC_PLAN.md  CLEANUP_FIX_COMPLETE.md  CLEANUP_FIX_PLAN.md  CLI_MODE_ADDED.md  CROSS_PLATFORM_COMPLETE.md  CROSS_PLATFORM_PROGRESS.md  CURSOR_PRESERVATION_FIX.md  Cargo.toml  DIAGNOSTIC_TESTS.md  DISABLE_NFTABLES_DOWNLOAD_PLAN.md  EBPF_BACKENDS.md  EBPF_CGROUP_ID_FIX.md  EBPF_CGROUP_LIMITATION.md  EBPF_CLEANUP_FIX.md  EBPF_DIAGNOSTICS_ADDED.md  EBPF_DIAGNOSTIC_SOLUTION1.md  EBPF_IMPLEMENTATION.md  EBPF_IMPROVEMENTS_COMPLETE.md  EBPF_PHASE1_COMPLETE.md  EBPF_SOLUTION2_COMPLETE.md  (+88 more)
.github/workflows/: readme-checker.yml
chadthrottle/: Cargo.toml  build.rs
chadthrottle-common/: Cargo.toml  README.md
chadthrottle-common/src/: lib.rs
chadthrottle-ebpf/: Cargo.toml
chadthrottle-ebpf/src/: egress.rs  ingress.rs  tc_classifier.rs
chadthrottle/src/: config.rs  history.rs  keybindings.rs  main.rs  monitor.rs  process.rs  traffic_classifier.rs  ui.rs
chadthrottle/src/backends/: mod.rs
chadthrottle/src/backends/cgroup/: mod.rs
chadthrottle/src/backends/cgroup/v1/: mod.rs
chadthrottle/src/backends/cgroup/v2/: mod.rs  nftables.rs
chadthrottle/src/backends/monitor/: mod.rs  pnet.rs  windows_poll.rs
chadthrottle/src/backends/process/: linux.rs  macos.rs  mod.rs  windows.rs
chadthrottle/src/backends/process/socket_mapper/: mod.rs
chadthrottle/src/backends/process/socket_mapper/linux/: libproc.rs  mod.rs  procfs.rs
chadthrottle/src/backends/process/socket_mapper/macos/: libproc.rs  lsof.rs  mod.rs
chadthrottle/src/backends/process/socket_mapper/windows/: iphelper.rs  mod.rs
chadthrottle/src/backends/throttle/: linux_ebpf_utils.rs  linux_nft_utils.rs  linux_tc_utils.rs  manager.rs  mod.rs
chadthrottle/src/backends/throttle/download/: mod.rs
chadthrottle/src/backends/throttle/download/linux/: ebpf.rs  ebpf_cgroup.rs  ifb_tc.rs  mod.rs  nftables.rs  tc_police.rs
chadthrottle/src/backends/throttle/download/macos/: dnctl.rs  mod.rs
chadthrottle/src/backends/throttle/upload/: mod.rs
chadthrottle/src/backends/throttle/upload/linux/: ebpf.rs  ebpf_cgroup.rs  mod.rs  nftables.rs  tc_htb.rs
chadthrottle/src/backends/throttle/upload/macos/: dnctl.rs  mod.rs
src/: config.rs  keybindings.rs  main.rs  monitor.rs  process.rs  throttle.rs  ui.rs
src/backends/: capability.rs  mod.rs
src/backends/monitor/: mod.rs  pnet.rs
src/backends/throttle/: linux_tc_utils.rs  manager.rs  mod.rs
src/backends/throttle/download/: mod.rs
src/backends/throttle/download/linux/: ebpf_cgroup.rs  ifb_tc.rs  mod.rs  tc_police.rs
src/backends/throttle/upload/: mod.rs
src/backends/throttle/upload/linux/: ebpf_cgroup.rs  mod.rs  nftables.rs  tc_htb.rs
xtask/: README.md
xtask/src/: main.rs
