[workspace]
resolver = "2"
members = [
    "chadthrottle",
    "chadthrottle-common",
    "chadthrottle-ebpf",
]

[workspace.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
chadthrottle-common = { path = "chadthrottle-common" }

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
