[workspace]
resolver = "2"
members = ["chadthrottle", "chadthrottle-common", "xtask"]
# chadthrottle-ebpf is excluded from workspace because it targets bpfel-unknown-none
# and should only be built via xtask
exclude = ["chadthrottle-ebpf"]

[workspace.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
chadthrottle-common = { path = "chadthrottle-common" }

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
