[package]
name = "chadthrottle-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { workspace = true }
chadthrottle-common = { workspace = true }

[[bin]]
name = "chadthrottle-egress"
path = "src/egress.rs"

[[bin]]
name = "chadthrottle-ingress"
path = "src/ingress.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 1

[profile.release]
lto = true
opt-level = 3
debug = false
panic = "abort"
codegen-units = 1
