[package]
name = "chadthrottle-ebpf"
version = "0.1.0"
edition = "2024"

[workspace]
# This crate is a standalone workspace member (excluded from parent)
# but inherits dependencies from the parent workspace

[dependencies]
aya-ebpf = "0.1"
chadthrottle-common = { path = "../chadthrottle-common", default-features = false }

[[bin]]
name = "chadthrottle-egress"
path = "src/egress.rs"

[[bin]]
name = "chadthrottle-ingress"
path = "src/ingress.rs"

[[bin]]
name = "chadthrottle-tc-classifier"
path = "src/tc_classifier.rs"
