[package]
name = "chadthrottle"
version = "0.6.0"
edition = "2024"
authors = ["ChadThrottle Contributors"]
description = "A TUI network monitor and throttler for Linux - like NetLimiter but chad"
license = "MIT"

[features]
default = [
  "monitor-pnet",
  "throttle-tc-htb",
  "throttle-ifb-tc",
  "throttle-tc-police",
  "throttle-nftables",
  "throttle-ebpf",      # Disabled: Requires building eBPF programs with 'cargo xtask build-ebpf'
  "cgroup-v1",
  "cgroup-v2-nftables",
]

# Monitor backends
monitor-pnet = ["pnet", "pnet_datalink", "pnet_packet"]

# Cgroup backends (used by throttle backends for per-process isolation)
cgroup-v1 = []          # Cgroup v1 net_cls controller (legacy, fallback)
cgroup-v2-nftables = [] # Cgroup v2 with nftables socket matching (modern)
cgroup-v2-ebpf = []     # Cgroup v2 with eBPF TC classifier (future)

# Throttle backends (Linux)
throttle-tc-htb = [] # TC HTB upload (always available on Linux)
throttle-ifb-tc = [] # IFB+TC download (needs IFB module)
throttle-tc-police = [] # TC Police download (no IFB needed, fallback)
throttle-nftables = [] # nftables throttling (modern, better than TC)
throttle-ebpf = [
  "dep:aya",
  "dep:chadthrottle-common",
  "chadthrottle-common/userspace",
] # eBPF cgroup throttling (best performance)

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5.0"
sysinfo = "0.31"
procfs = "0.16"
nix = { version = "0.29", features = ["process", "signal"] }
anyhow = "1.0"
log = { version = "0.4.28", features = ["release_max_level_trace"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
pnet = { version = "0.35.0", optional = true }
pnet_datalink = { version = "0.35.0", optional = true }
pnet_packet = { version = "0.35.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aya = { workspace = true, optional = true }
chadthrottle-common = { workspace = true, optional = true, default-features = true }
libc = "0.2"
