[package]
name = "chadthrottle"
version = "0.6.0"
edition = "2024"
authors = ["ChadThrottle Contributors"]
description = "A TUI network monitor and throttler for Linux - like NetLimiter but chad"
license = "MIT"

[features]
# Default: Basic monitoring works on all platforms
default = ["monitor-pnet"]

# Monitor backends (cross-platform)
monitor-pnet = ["dep:pnet", "dep:pnet_datalink", "dep:pnet_packet"]

# Cgroup backends (Linux-only, used by throttle backends for per-process isolation)
cgroup-v1 = []          # Cgroup v1 net_cls controller (legacy, fallback)
cgroup-v2-nftables = [] # Cgroup v2 with nftables socket matching (modern)
cgroup-v2-ebpf = []     # Cgroup v2 with eBPF TC classifier (future)

# Linux-specific throttle backends (user must explicitly enable these)
throttle-tc-htb = [] # TC HTB upload (always available on Linux)
throttle-ifb-tc = [] # IFB+TC download (needs IFB module)
throttle-tc-police = [] # TC Police download (no IFB needed, fallback)
throttle-nftables = [] # nftables throttling (modern, better than TC)
throttle-ebpf = [
  "dep:aya",
  "dep:chadthrottle-common",
  "chadthrottle-common/userspace",
] # eBPF cgroup throttling (best performance)

# Convenience feature bundles for full platform support
linux-full = [
  "monitor-pnet",
  "throttle-tc-htb",
  "throttle-ifb-tc",
  "throttle-tc-police",
  "throttle-nftables",
  "throttle-ebpf",
  "cgroup-v1",
  "cgroup-v2-nftables",
]

macos-full = ["monitor-pnet"]

[dependencies]
# Core dependencies (cross-platform)
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5.0"
sysinfo = "0.31"
anyhow = "1.0"
log = { version = "0.4.28", features = ["release_max_level_trace"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
unicode-width = "0.1"

# Network monitoring (optional, cross-platform)
pnet = { version = "0.35.0", optional = true }
pnet_datalink = { version = "0.35.0", optional = true }
pnet_packet = { version = "0.35.0", optional = true }

# Process information library
# macOS: wraps native libproc API for socket enumeration
# Linux: uses procfs (see Linux-specific dependencies below)
# Windows: uses sysinfo (see core dependencies above)

# eBPF support (optional, Linux-only)
aya = { workspace = true, optional = true }
chadthrottle-common = { workspace = true, optional = true, default-features = true }

# Linux-specific dependencies (always available on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"                                              # Always needed for LinuxProcessUtils
nix = { version = "0.29", features = ["process", "signal"] }
libproc = "0.14"                                             # Used by LibprocSocketMapper backend

# macOS-specific dependencies (always available on macOS)
[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14" # Native libproc API for socket enumeration

# Windows-specific dependencies (always available on Windows)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
] }
